# webcam-direct-linux

./: Cargo.toml  rustfmt.toml
.github/workflows/: rust.yml
examples/: first_approach.rs  gatt_server_io.rs  gstreamer_testing.rs  le_advertise.rs
src/: app_data_store.rs  error.rs  gatt_const.rs  main.rs  provisioner.rs  sdp_exchanger.rs  vcam.rs
src/access_point_ctl/: mod.rs  process_hdl.rs
src/access_point_ctl/dhcp_server/: ip_range.rs  mod.rs
src/access_point_ctl/iw_link/: mod.rs
src/access_point_ctl/iw_link/wdev_drv/: interface_index.rs  mod.rs
src/access_point_ctl/iw_link/wdev_drv/nl80211_drv/: mod.rs  nl80211_const.rs  nl80211_parser.rs
src/access_point_ctl/wifi_manager/: file_hdl.rs  hostapd_proc.rs  mod.rs  wpa_ctl.rs
src/app_data/: kv_db.rs  mod.rs  schemas.rs
src/app_data_store/: host_entity.rs  mobile_entity.rs  mod.rs
src/ble/: ble_cmd_api.rs  ble_requester.rs  ble_server.rs  mobile_buffer.rs  mobile_comm.rs  mobile_sdp_types.rs  mod.rs
src/ble/ble_clients/: device_props.rs  gatt_const.rs  mobile_prop.rs  mod.rs  provisioner.rs  sdp_exchanger.rs
src/ble_ctl/: cmd_event.rs  mobiles_manager.rs  mod.rs
src/sdp_exchanger/: mod.rs  webcam_rtc.rs
src/vdevice/: mod.rs
src/vdevice_builder/: mod.rs  system_utils.rs  vdevice.rs  webrtc_pipeline.rs
