[package]
name = "webcam-direct-linux"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
bluer = { version = "0.17.1", features = ["full"] }
directories = "5.0.1"
futures = "0.3.30"
hostname = "0.4.0"
image = "0.25.1"
openh264 = "0.6.0"
serde = "1.0.203"
serde_json = "1.0.117"
tokio = {verison="1.37.0", features=["full"]}
v4l = "0.14.0"
v4l2loopback = "0.1.0"
webrtc = "0.11.0"
